created an images folder & updated my header

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <header>
-        <h1>Assessment Task 1</h1>
+        <h1>my Katy Perry website </h1>
     </header>
+    
     <main>
         <p>Insert Introduction Here</p>
     </main>
