--- a/index.html
+++ b/index.html
@@ -3,19 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Insert Title Here</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <title>All about KATY PERRY</title>
+    <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
-    <header>
-        <h1>my Katy Perry website </h1>
-    </header>
-    
-    <main>
-        <p>Insert Introduction Here</p>
-    </main>
-    <footer>
-        <p>Start Footer Here</p>
-    </footer>
+    <h2>💖Katy Perry💖</h2>
+
+    <div class="box">
+        <h2>Tours</h2>
+        <p>All of Katy's tours until now 🎤</p>
+        <a href="https://www.concertarchives.org/bands/katy-perry" target="_blank" class="tour-link">View Katy Perry's Tours ➡️</a>
+    </div>
+
+    <div class="box">
+        <h2>More About Katy</h2>
+        <p>Anything Katy Related💅🏻</p>
+        <a href="https://www.katyperry.com" target="_blank" class="tour-link">Visit Katy Perry's Official Website➡️</a>
+    </div>
+
+    <div class="box">
+        <h2>Achievements🏆</h2>
+        <p>From Grammy Awards to Billboard Hits!🎶</p>
+        <a href="https://www.billboard.com/music/katy-perry" target="_blank" class="tour-link">See Katy Perry's Billboard Achievements➡️</a>
+    </div>
+
+    <div class="box">
+        <h2>Colabs 🤝</h2>
+        <p>Katy Perry's collabs with other artists! 🎤</p>
+        <a href="https://hellorayo.co.uk/hits-radio/entertainment/music/katy-perry-collaborations/" target="_blank" class="tour-link">See Katy Perry's Collaborations ➡️</a>
+    </div>
+
+    <h2>Image Collage</h2>
+    <div class="collage">
+        <img src="image1.jpg" alt="Image 1">
+        <img src="image2.jpg" alt="Image 2">
+        <img src="image3.jpg" alt="Image 3">
+        <img src="image4.jpg" alt="Image 4">
+        <img src="image5.jpg" alt="Image 5">
+        <img src="image6.jpg" alt="Image 6">
+    </div>
 </body>
 </html>
